<resources>
    <string name="app_name">Hourglass</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="games_fragment_label">Games Fragment</string>
    <string name="create_game_fragment_label">Create Game Fragment</string>
    <string name="add_cards_fragment_label">Add Cards Fragment</string>
    <string name="choose_team_fragment_label">Choose Team Fragment</string>

    <!--    Create Game Screen-->
    <string name="create_game_fragment_title">Create A Game</string>
    <string name="create_game_name">Game Name</string>
    <string name="create_game_team_1_name">Team 1 Name</string>
    <string name="create_game_team_2_name">Team 2 Name</string>
    <string name="create_game_team_3_name">Team 3 Name</string>
    <string name="create_game_num_cards">Cards per player</string>
    <string name="create_game_password">Game password</string>

    <!--    Games Screen-->
    <string name="games_fragment_title">Games</string>
    <string name="games_join_game_dialog_title">You were invited to join a game</string>
    <string name="games_join_game_dialog_subtitle">Game: %1$s </string>
    <string name="games_join_game_dialog_positive_button">Join</string>
    <string name="games_join_game_dialog_negative_button">Cancel</string>
    <string name="games_no_active_games_title">No active games</string>
    <string name="games_no_active_games_description">Games that you join or create\nwill be shown here</string>
    <string name="games_create_game">Create</string>

    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_cards_title">Add your cards</string>
    <string name="add_cards_description">You can use celebrities, characters from a book or a TV series, or anything you decide on together</string>
    <string name="add_cards_card_1">Card 1</string>
    <string name="add_cards_card_2">Card 2</string>
    <string name="add_cards_card_3">Card 3</string>
    <string name="add_cards_card_4">Card 4</string>
    <string name="add_cards_card_5">Card 5</string>
    <string name="add_cards_card_6">Card 6</string>

    <string name="login_welcome_title">Hi there, I am <i>Hourglass</i></string>
    <string name="login_welcome_subtitle">Your remote <i>Celebrity Game</i> companion</string>
    <string name="login_username_hint">Your nickname</string>
    <string name="shared_prefs_default">prefs</string>
    <string name="action_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_switch_team">Switch team</string>
    <string name="menu_end_turn">End my turn</string>
    <string name="menu_help">Help</string>
    <string name="game_on_start">Start</string>
    <string name="version_value">v%s</string>
    <string name="teams">Teams</string>
    <string name="new_round_alert_message">Are you sure you want to start a new round?</string>
    <string name="end_turn_alert_message">Are you sure you want to end your turn?</string>
    <string name="ok">OK</string>
    <string name="about_dialog_send_feedback">Send Feedback</string>
    <string name="about_dialog_later">Later</string>
    <string name="error_generic">Something went wrong</string>

    <!--    Share-->
    <string name="share_with_title">Share with</string>
    <string name="share_message">Please join this Hourglass game(%1$s):\n%2$s</string>

    <!--    End of turn dialog-->
    <string name="end_turn_title">%1$s\'s turn ended</string>
    <string name="end_turn_cards_description">%1$d cards found</string>
    <string name="choose_team_title">Choose your team</string>

    <!--    End of round dialog-->
    <string name="end_round_title">End of round %1$s</string>

    <!--    Leave game dialog-->
    <string name="leave_game_dialog_title">Are you sure you want to quit and end your turn?</string>
    <string name="end_turn_dialog_title">Are you sure you want to end your turn?</string>

    <string name="game_over_title">Game Over</string>
    <string name="game_over_subtitle">%1$s won!</string>
    <string name="choose_team_no_team_selected_error">Please choose a team</string>

    <!--    Welcome screen-->

    <string name="welcome_1_title">The hilarious guessing game</string>
    <string name="welcome_1_description">Bring your mind, body &amp; mobile device</string>
    <string name="welcome_2_title">Connect from anywhere</string>
    <string name="welcome_2_description">Play with friends, family and colleagues wherever you are</string>
    <string name="welcome_3_title">Choose your teammates</string>
    <string name="welcome_3_description">Start thinking who you\nwant to play with</string>
    <string name="instructions_section1_title">What is Hourglass ?</string>
    <string name="instructions_section1_description">"Hourglass is a virtual version of a popular classic game which is known in many countries around the world. It is also known as:
Celebrities, The Hat Game, Lunchbox, Fish Bowl, Salad Bowl, Who Is The Man &amp; The Name Game.

You will need at least 4 people to play and the more the merrier!

Get together in a video call and play through rounds of: <b>Describe, One Word &amp; Charades</b>."
    </string>

    <string name="instructions_section2_title">Instructions</string>
    <string name="instructions_section2_subtitle_setup">Setup</string>
    <string name="instructions_section2_description">"1. One person creates a game and shares it with others.
2. Each player writes their words on “cards” that will be guessed later. All cards from all players are gathered together in one deck.
3. Each player chooses their team. "</string>
    <string name="instructions_section2_subtitle_game">Gameplay</string>
    <string name="instructions_section2_description2">"Each team tries to guess as many cards as possible against the clock (aka Hourglass).
In each turn one player is giving the clues while the rest of their team guesses.

One game includes 3 rounds and the same cards are reused in every round!
</string>

    <string name="instructions_section3_title">The rounds</string>
    <string name="instructions_section3_round1_title">Round 1 : Describe</string>
    <string name="instructions_section3_round2_title">Round 2 : One Word</string>
    <string name="instructions_section3_round3_title">Round 3 : Charades</string>
    <string name="instructions_section3_round1_descriptions">You can use as many words as you like to describe the word on the card, without acting or gestures.</string>
    <string name="instructions_section3_round2_descriptions">You can say exactly 1 word per card. Once you said a word, you can only repeat it…</string>
    <string name="instructions_section3_round3_descriptions">Use mime to communicate the name in the card. No words or sounds allowed</string>
    <string name="instructions_section3_general_description"><b>The scores from all three rounds are added together. The team with the most points wins!</b></string>

    <string name="end_round_next_round_button_cta">NEXT ROUND</string>
    <string name="next_round_next_player_value">with %1$d seconds left</string>
    <string name="next_round_next_player_to_play_label">Next player: </string>
    <string name="next_round_title">Round %d : %s</string>
    <string name="change_round_next_round_cta">READY</string>
    <string name="welcome_first_round_cta">LET\'S PLAY</string>
    <string name="welcome_first_round_starting_player_label">Starting player:</string>
    <string name="myEmail">giladgot@gmail.com</string>
    <string name="about_dialog_message_first_part">"This game was made with love.\n\nYour feedback is important to us 💛"</string>
    <string name="feedback_email_subject">Feedback for Hourglass</string>
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_version_part">Version: %s</string>

    <!--    Share-->
    <string name="share_frag_description"><![CDATA[Game <b>%s</b> was successfully created.<br><br>Now it is time to share it.]]></string>
    <string name="share_frag_button_cta">SHARE</string>
    <string name="share_frag_title">Sharing is nice</string>


<!--    New version available-->
    <string name="new_version_available_title">New version</string>
    <string name="new_version_available_body">There is a newer Hourglass version available!</string>
    <string name="new_version_available_positive">Update</string>
    <string name="new_version_available_negative">Later</string>

    <!--    New version must upgrade-->
    <string name="new_version_must_title">Update required</string>
    <string name="new_version_must_body">You will need to update your version to the newest one</string>
    <string name="new_version_must_positive">Update</string>
</resources>
