<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gggames.hourglass.com.gggames.com.MainActivity">

    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:title="@string/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_switch_team"
        android:orderInCategory="100"
        android:title="@string/menu_switch_team"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
