<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/section3Title"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_section3_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/section3round1Title"
            style="@style/TextViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_section3_round1_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section3Title" />

        <TextView
            android:id="@+id/section3round1Description"
            style="@style/TextViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_section3_round1_descriptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section3round1Title" />

        <TextView
            android:id="@+id/section3round2Title"
            style="@style/TextViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/instructions_section3_round2_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section3round1Description" />

        <TextView
            android:id="@+id/section3round2Description"
            style="@style/TextViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_section3_round2_descriptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section3round2Title" />

        <TextView
            android:id="@+id/section3round3Title"
            style="@style/TextViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/instructions_section3_round3_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section3round2Description" />


        <TextView
            android:id="@+id/section3round3Description"
            style="@style/TextViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_section3_round3_descriptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section3round3Title" />

        <TextView
            android:id="@+id/sectionGeneralDescription"
            style="@style/TextViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/instructions_section3_general_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section3round3Description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionGeneralDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>