<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.gggames.celebs.presentation.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_GamesFragment"
            app:destination="@id/GamesFragment" />
    </fragment>
    <fragment
        android:id="@+id/GamesFragment"
        android:name="com.gggames.celebs.presentation.GamesFragment"
        android:label="@string/games_fragment_label"
        tools:layout="@layout/fragment_games">

        <action
            android:id="@+id/action_GamesFragment_to_CreateGameFragment"
            app:destination="@id/CreateGameFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/CreateGameFragment"
        android:name="com.gggames.celebs.presentation.CreateGameFragment"
        android:label="@string/create_game_fragment_label"
        tools:layout="@layout/fragment_create_game">

        <action
            android:id="@+id/action_CreateGame_to_GamesFragment"
            app:destination="@id/GamesFragment" />
        <action
            android:id="@+id/action_CreateGameFragment_to_AddCardsFragment"
            app:destination="@id/AddCardsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/AddCardsFragment"
        android:name="com.gggames.celebs.presentation.AddCardsFragment"
        android:label="@string/add_cards_fragment_label"
        tools:layout="@layout/fragment_add_cards">
        <action
            android:id="@+id/action_AddCardsFragment_to_GamesFragment"
            app:destination="@id/GamesFragment"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <argument
            android:name="gameId"
            app:argType="string" />
        <argument
            android:name="groups"
            app:argType="string[]" />
        <action
            android:id="@+id/action_AddCardsFragment_to_chooseTeamFragment"
            app:destination="@id/chooseTeamFragment" />
    </fragment>

    <fragment
        android:id="@+id/chooseTeamFragment"
        android:name="com.gggames.celebs.presentation.ChooseTeamFragment"
        android:label="@string/choose_team_fragment_label"
        tools:layout="@layout/fragment_choose_teams"
        >
        <argument
            android:name="groups"
            app:argType="string[]" />
    </fragment>

</navigation>
